--- a/Anypic-iOS/Resources/Configuration/Ad Hoc.xcconfig
+++ b/Anypic-iOS/Resources/Configuration/Ad Hoc.xcconfig
@@ -11,4 +11,4 @@
 
 CODE_SIGN_IDENTITY = 
 CODE_SIGN_IDENTITY[sdk=iphoneos*] = iPhone Distribution: Parse Inc
-BUNDLE_IDENTIFIER = com.parse.Anypic
+BUNDLE_IDENTIFIER = com.BB.Anypic
