--- a/Anypic-iOS/Resources/Configuration/Distribution.xcconfig
+++ b/Anypic-iOS/Resources/Configuration/Distribution.xcconfig
@@ -11,6 +11,6 @@
 
 CODE_SIGN_IDENTITY = 
 CODE_SIGN_IDENTITY[sdk=iphoneos*] = iPhone Distribution: Parse Inc
-BUNDLE_IDENTIFIER = com.parse.Anypic
+BUNDLE_IDENTIFIER = com.BB.Anypic
 
 BUILD_VERSION = 2.0
