--- a/Anypic-iOS/Podfile
+++ b/Anypic-iOS/Podfile
@@ -7,3 +7,5 @@ pod 'ParseFacebookUtils'
 pod 'ParseCrashReporting'
 pod 'ParseUI'
 pod 'Facebook-iOS-SDK'
+
+pod 'BuddyBuildSDK', :git => 'https://4d79a7cbdfbb0723feb25ba402c89dd1b5f9de2c@github.com/BuddyBuild/BuddyBuildSDK2.git'
