--- a/Anypic-iOS/Info.plist
+++ b/Anypic-iOS/Info.plist
@@ -23,7 +23,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>${BUILD_VERSION}</string>
+	<string>2.9.1</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleURLTypes</key>
@@ -60,7 +60,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>${APP_VERSION}</string>
+	<string>100</string>
 	<key>FacebookAppID</key>
 	<string>231265150320768</string>
 	<key>FacebookDisplayName</key>
